# gpt2_from_scratch

./: Cargo.toml  README.md  config.yaml  config_tshark.yaml  download_gpt2_model.bash
src/: data.rs  learner.rs  lib.rs  main.rs  model.rs  tokenizer.rs  train.rs
