[package]
name = "gpt2_from_scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.14.0", features = ["train", "ndarray"] }
clap = { version= "4.5.20", features = ["derive"] }
anyhow = "1.0"
regex = "1.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.6.0"
rand = "0.8"