[package]
name = "gpt2_from_scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.15.0", features = ["train", "ndarray", "wgpu"] }
clap = { version= "4.5.20", features = ["derive"] }
anyhow = "1.0.92"
regex = "1.11.1"

twelf = { version= "0.15", features= ["env", "yaml"]}

serde = { version = "1.0.212", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"